resource_customizations/kyverno.io/ClusterPolicy/testdata/progressing.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec: {}
