resource_customizations/kyverno.io/ClusterPolicy/testdata/terminating.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: terminating-resource
  deletionTimestamp: "2024-01-01T00:00:00Z"
  finalizers:
    - example.com/finalizer
